# github_token_updater

./: .gitignore  README.md  pyproject.toml  requirements.txt
github_token_updater/: __init__.py  __main__.py  utils.py
tests/: test_main.py
